@@ -12,36 +12,22 @@ import java.util.stream.Collectors;
 public class Client implements Cloneable {
 
     @Id
-    @GeneratedValue(strategy = GenerationType.SEQUENCE)
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
     @Column(name = "id")
     private Long id;
 
     @Column(name = "name")
     private String name;
 
-    @OneToOne(cascade = {CascadeType.PERSIST, CascadeType.DETACH, CascadeType.REFRESH, CascadeType.REMOVE})
+    @OneToOne(cascade = CascadeType.ALL)
     @JoinColumn(name = "address_id")
     private Address address;
 
-    @OneToMany(mappedBy = "client",
-            fetch = FetchType.EAGER,
-            cascade = {CascadeType.PERSIST, CascadeType.DETACH, CascadeType.REFRESH, CascadeType.REMOVE})
+    @OneToMany(cascade = CascadeType.ALL, fetch = FetchType.EAGER, mappedBy = "client")
     private List<Phone> phones;
 
 
-    public Client(Client client) {
-        this(client.getId(), client.getName(), client.getAddress().clone(), client.getPhones());
-    }
-
-    public Client(Long id, String name, Address address, List<Phone> phones) {
-        this.id = id;
-        this.name = name;
-        this.address = address;
-        this.phones = phones;
-
-        if (this.phones != null && !this.phones.isEmpty()) {
-            this.phones.forEach(phone -> phone.setClient(this));
-        }
+    public Client() {
     }
 
     public Client(String name) {
@@ -54,34 +40,26 @@ public class Client implements Cloneable {
         this.name = name;
     }
 
-    public Client() {
-
+    public Client(Long id, String name, Address address, List<Phone> phones) {
+        this.id = id;
+        this.name = name;
+        this.address = address;
+        this.phones = phones;
+        if (this.phones != null && !this.phones.isEmpty()) {
+            this.phones.forEach(phone -> phone.setClient(this));
+        }
     }
-
 
     @Override
     public Client clone() {
-            Client client = null;
-        try {
-            client = (Client)super.clone();
-        } catch (CloneNotSupportedException e) {
-            client = new Client(this.id, this.name);
-        }
-
-        if (this.address != null) {
-            client.address = this.address.clone();
-        }
-
-        client.phones  = Optional.ofNullable(this.phones)
-                .stream()
-                .flatMap(List::stream)
-                .map(Phone::clone)
-                .toList();
-
-
-        return client;
+        return new Client(this.id, this.name,
+                Optional.ofNullable(this.address).map(Address::clone).orElse(null),
+                Optional.ofNullable(this.phones).map(Collection::stream)
+                        .map(phoneStream -> phoneStream.map(Phone::clone)
+                                .collect(Collectors.toList()))
+                        .orElse(null)
+        );
     }
-
 
     public Long getId() {
         return id;
@@ -97,13 +75,7 @@ public class Client implements Cloneable {
 
     public void setName(String name) {
         this.name = name;
-
-        Optional.ofNullable(this.phones)
-                .stream()
-                .flatMap(List::stream)
-                .forEach(e -> e.setClient(this));
     }
-
 
     public Address getAddress() {
         return address;
@@ -122,30 +94,10 @@ public class Client implements Cloneable {
     }
 
     @Override
-    public boolean equals(Object o) {
-        if (this == o) return true;
-        if (!(o instanceof Client)) return false;
-
-        Client client = (Client) o;
-
-        if (getId() != null ? !getId().equals(client.getId()) : client.getId() != null) return false;
-        return getName() != null ? getName().equals(client.getName()) : client.getName() == null;
-    }
-
-    @Override
-    public int hashCode() {
-        int result = getId() != null ? getId().hashCode() : 0;
-        result = 31 * result + (getName() != null ? getName().hashCode() : 0);
-        return result;
-    }
-
-    @Override
     public String toString() {
         return "Client{" +
                 "id=" + id +
                 ", name='" + name + '\'' +
-                ", address=" + address +
-                ", phones=" + phones +
                 '}';
     }
 }
